--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -750,6 +750,11 @@ p {
     background-color: #3864f3;
 }
 
+.btnActive{
+    background-color: #3864f3;
+    color: white;
+}
+
 /*************************
       9.  BLOG
 ***************************/
